fix nowrap on smaller screen + some decorations + overflow visible

--- a/style/style.scss
+++ b/style/style.scss
@@ -10,7 +10,7 @@ body,
 main {
   max-width: 100%;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x: visible;
 }
 
 html {
@@ -38,7 +38,7 @@ main {
   line-height: 3.5rem;
   font-family: $body-font;
   margin-bottom: 100px;
-  overflow-x: hidden;
+  overflow-x: visible;
 }
 
 span.randomize {
@@ -99,9 +99,11 @@ span.sentence_break {
   font-weight: 400;
   transition: 0.2s;
   background-color: rgb(241, 241, 241);
+  margin-bottom: 50px;
 }
 
-.generate_button button:hover {
+.generate_button button:hover,
+.generate_button button:active {
   box-shadow: 8px 10px 0 0 $dark;
 }
 
@@ -122,6 +124,11 @@ button:active {
     margin-bottom: 50px;
     font-size: 1.2rem;
     line-height: 3rem;
+  }
+
+  span.tj_item,
+  span.character {
+    white-space: normal;
   }
 
   span.randomize::after {
@@ -153,6 +160,6 @@ button:active {
 .title {
   font-family: "Langar", serif;
   font-size: 4em;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
   text-transform: uppercase;
 }
